[B]0.1.7[/B]
- New action added. Watchdog can start other addons too.

[B]0.1.6[/B]
- mechanism for interoperability between addons implemented. TVH Powermanagement
  now creates an addon-id.ctl file that signals an active state of the addon.
  Watchdog kicks off without any action in this case.

[B]0.1.4[/B]
- Use DialogProgress instead of DialogProgressBG as this wasn't shown in fullscreen mode

[B]0.1.3[/B]
- CEC command added (turns TV off)

[B]0.1.2[/B]
- German language file added, some code enhancements

[B]0.1.1[/B]
- Initial version
